--- a/src/_includes/base.liquid
+++ b/src/_includes/base.liquid
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/assets/styles/main.css">
-    <title>WordPress Headless CMS Demo</title>
+    <title>May the Force Be With You</title>
   </head>
   <body>
     <header>
