Added some styling...

--- a/src/_includes/base.liquid
+++ b/src/_includes/base.liquid
@@ -5,17 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/assets/styles/main.css">
-    <title>May the Force Be With You</title>
+    <script src="/assets/scripts/dataBoard.js"></script>
+    <title>{{ title }}</title>
   </head>
   <body>
     <header>
-      <h1>WordPress Headless CMS Demo</h1>
+      <div id="starWarsLogo">
+        <a href="/"><img src="/assets/images/logo-starwars.png" alt="Star Wars"></a>
+      </div>
+      <div id="cscie114Logos">
+        <a href="https://https://canvas.harvard.edu/courses/112559/"><img src="/assets/images/dce-shield.png" alt="Harvard Extension School"></a>
+        <a href="https://jamstack.org/"><img src="/assets/images/jamstack_icon_color_transparent.png" alt="Jamstack"></a>
+      </div>
     </header>
     <main>
       {{ content }}
     </main>
     <footer>
-      &copy; 2023 by Michael D. Hilborn
+      &copy; Copyright 2023 Michael D. Hilborn
     </footer>
   </body>
 </html>
