--- a/src/index.liquid
+++ b/src/index.liquid
@@ -4,12 +4,14 @@ layout: base.liquid
 ---
 
 <h2>{{ title }}</h2>
-<ul>
-  {% for post in collections.posts %}
-    <li>
-      <a href="{{ post.url }}">{{ post.data.post.title.rendered }}</a><br/>
-      <div>{{ post.data.post.date }}</div>
-      <div>{{ post.data.post.excerpt.rendered }}</siv>
-    </li>
-  {% endfor %}
-</ul>
+<div id="homepage">
+  <ul>
+    {% for post in collections.posts %}
+      <li>
+        <a href="{{ post.url }}">{{ post.data.post.title.rendered }}</a><br/>
+        <div class="postListDate">{{ post.data.post.date }}</div>
+        <div class="postListExcerpt">{{ post.data.post.excerpt.rendered }}</siv>
+      </li>
+    {% endfor %}
+  </ul>
+</div>
